	the ROC curve was evaluated resulted in more points than the other
	statistics. Fixed to use the points established by 'table', used to
	generate these other statistics. This affected the plot method.

	* plot.roc: Allow user to specify the line types used to draw the
	plots. Two line types can be specified for plots comparing analogue
	with non-analogue statistics.

	* plot.minDC: argument 'lty.quantile' was not being used by the
	graphical function that drew the quantiles of the pairwise D[ij]s.

Version 0.6-22

	* tran.formula: bug in my implementation of the standard
	non-standard evaluation technique used within the formula method
	for 'tran'. Diagnosis and fix by Prof. Brian Ripley.

Version 0.6-21

	* distx.c, distxy.c: Warning due to non ISO C-compliant 'mistake'
	in experimental code for Gower's Mixed coefficient.

Version 0.6-20

	* Stratiplot: was not respecting the sort variable under certain
	conditions.

	* panel.Stratiplot: typo in Rd file was causing warnings in R
	version 2.10.0-beta.

Version 0.6-19

	* join: gains ability to return the inner join of the supplied
	data frames. This is the intersection of the set of variables
	in the supplied data frames, the set of variables common to the
	supplied data frames.

Version 0.6-18

	* join: new arguments 'type' and 'value'.

	'type' controls which join is performed. Options are (currently)
	"outer" (default) and "left". The left join is used to prepare two
	or more data sets for ordinating the first and subsequently
	passively projecting the other data sets into this ordination.
	The outer join is used to prepare data for transfer functions such
	as MAT and WA.

	'value' allows the user to supply a numeric value to be used to
	replace 'NA's.

Version 0.6-17

	* predict.wa: deshrinking method was not being honoured when
	expanding predictions.

	* Stratiplot: gains option ('rev') to reverse the y-axis limits.

	Can now also sort/order the columns of 'x' (the species or